# presagetech-grayscale

./: README.md
android-imageutil-demo/: settings.gradle.kts
android-imageutil-demo/app/: build.gradle.kts
android-imageutil-demo/app/src/main/: AndroidManifest.xml
android-imageutil-demo/app/src/main/java/com/jollydroid/imageutildemo/: ImageViewModel.kt  MainActivity.kt  WithPermissions.kt
android-imageutil-demo/app/src/main/java/com/jollydroid/imageutildemo/ui/theme/: Color.kt  Theme.kt  Type.kt
android-imageutil-demo/app/src/main/res/values/: strings.xml  themes.xml
android-imageutil-demo/gradle/: libs.versions.toml
android-imageutil-demo/gradle/wrapper/: gradle-wrapper.properties
android-imageutil-sdk/: .gitignore  build.gradle.kts  settings.gradle.kts
android-imageutil-sdk/gradle/: libs.versions.toml
android-imageutil-sdk/gradle/wrapper/: gradle-wrapper.properties
android-imageutil-sdk/imageutilsdk/: CMakeLists.txt  build.gradle.kts
android-imageutil-sdk/imageutilsdk/src/main/cpp/: imageutil_jni.cpp
android-imageutil-sdk/imageutilsdk/src/main/java/com/jollydroid/imageutilsdk/: ImageUtil.kt  NativeBridge.kt
android-imageutil-sdk/test/: build.gradle.kts
android-imageutil-sdk/test/src/androidTest/java/com/jollydroid/imageutilsdk/test/: ExampleInstrumentedTest.kt
android-imageutil-sdk/test/src/main/: AndroidManifest.xml
android-imageutil-sdk/test/src/main/res/values/: strings.xml  themes.xml
android-imageutil-sdk/test/src/main/res/values-night/: themes.xml
cpp_shared/: .gitignore  CMakeLists.txt  build.sh
cpp_shared/include/: image_util.h
cpp_shared/src/: image_util.cpp
cpp_shared/test/: grayscale_converter_test.cpp
